--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -115,7 +115,8 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
   # -stdlib=libc++ will link using an alternative to gcc std c++ library - WARNING not working on OpenNao
   # -static-libgcc will link statically GLIBC
 
-  set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=gnu++11 -Wall -fPIC -static-libstdc++")
+  set(RAPP_CXX_FLAGS "-std=gnu++11 -Wall -fPIC -static-libstdc++")
+  set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${RAPP_CXX_FLAGS})
   message(STATUS "CXX Flags: " ${CMAKE_CXX_FLAGS})
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
   #set(CMAKE_EXE_LINKER_FLAGS "-lc++ -lcxxrt") # Set linker flags - WARNING alternative c++ libraries not present on OpenNao
@@ -132,7 +133,8 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     elseif ()
         message(FATAL_ERROR "Clang version >= 3.0 is required")
     endif()
-        set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -Wall")
+        set(RAPP_CXX_FLAGS "-std=c++11 -Wall")
+        set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${RAPP_CXX_FLAGS})
         message(STATUS "CXX Flags: " ${CMAKE_CXX_FLAGS})
         set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
         set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -mtune=native -march=native")
