--- a/cpp/RappConfig.cmake.in
+++ b/cpp/RappConfig.cmake.in
@@ -10,3 +10,6 @@ set(RAPP_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include")
 # Libraries
 set(RAPP_LIBRARIES @RAPP_SHARED_NAME@)
 set(RAPP_LIBRARIES_STATIC @RAPP_STATIC_NAME@)
+
+# Required compiler flags
+set(RAPP_CXX_FLAGS "@RAPP_CXX_FLAGS@")
