--- a/cpp/RappConfig.cmake.in
+++ b/cpp/RappConfig.cmake.in
@@ -8,8 +8,10 @@
 set(RAPP_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include")
  
 # Libraries
-set(RAPP_LIBRARIES @RAPP_SHARED_NAME@)
-set(RAPP_LIBRARIES_STATIC @RAPP_STATIC_NAME@)
+set(RAPP_LIBRARIES @FULL_RAPP_SHARED_NAME@)
+set(RAPP_LIBRARIES_STATIC @FULL_RAPP_STATIC_NAME@)
+
+set(RAPP_LIBRARY_DIRS "@CMAKE_INSTALL_PREFIX#/lib")
 
 # Required compiler flags
 set(RAPP_CXX_FLAGS "@RAPP_CXX_FLAGS@")
