new objects - [QRcodeMap, Pose], update [Path], update robot navigation API

--- a/cpp/includes/objects/CMakeLists.txt
+++ b/cpp/includes/objects/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(qrCode)
 add_subdirectory(audio)
 add_subdirectory(object)
 add_subdirectory(path)
-
+add_subdirectory(pose)
+add_subdirectory(QRcodeMap)
