--- a/cpp/includes/objects/CMakeLists.txt
+++ b/cpp/includes/objects/CMakeLists.txt
@@ -4,8 +4,8 @@ add_subdirectory(face)
 add_subdirectory(qrCode)
 add_subdirectory(audio)
 add_subdirectory(object)
-add_subdirectory(Path)
-add_subdirectory(Pose)
-add_subdirectory(PoseStamped)
-add_subdirectory(Msg_header)
-add_subdirectory(QRcodeMap)
+add_subdirectory(path)
+add_subdirectory(pose)
+add_subdirectory(poseStamped)
+add_subdirectory(msg_header)
+add_subdirectory(qrCodeMap)
