--- a/cpp/includes/objects/CMakeLists.txt
+++ b/cpp/includes/objects/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(Pose)
 add_subdirectory(PoseStamped)
 add_subdirectory(Msg_header)
 add_subdirectory(QRcodeMap)
+add_subdirectory(QRCode3D)
