Add flag for building empty implementation

--- a/cpp/impl/CMakeLists.txt
+++ b/cpp/impl/CMakeLists.txt
@@ -1,3 +1,5 @@
+IF(RAPP_WITH_IMPL_VISION)
+
 SET(VISION_LIB rapp_robot_vision)
 
 add_library(${VISION_LIB} SHARED
@@ -12,3 +14,5 @@ install (TARGETS ${VISION_LIB} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
 GET_PROPERTY(FULL_VISION_NAME TARGET ${VISION_LIB} PROPERTY LOCATION)
 
 SET(RAPP_SHARED_LIBS ${RAPP_SHARED_LIBS} ${FULL_VISION_NAME} PARENT_SCOPE)
+
+ENDIF(RAPP_WITH_IMPL_VISION)
